crates/ttrpg_checker/tests/snapshots/snapshot_diagnostics__duplicate_type_declaration.snap
---
source: crates/ttrpg_checker/tests/snapshot_diagnostics.rs
expression: render_errors(source)
---
error: duplicate type declaration `Foo`
  --> line 4:5
  |
4 |     enum Foo { C, D }
  |     ^^^^^^^^^^^^^^^^^
